--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -91,10 +91,11 @@ jobs:
 
     - name: Build (SPM)
       if: ${{ matrix.platform == 'macos' }}
-      run: swift build | xcbeautify --renderer github-actions
+      run: swift build
     - name: Build (Xcode)
       if: ${{ matrix.platform != 'macos' }}
       run: |
+        set -o pipefail
         xcodebuild build \
           -scheme ${{ needs.prepare.outputs.scheme }} \
           -destination "${{ steps.destination.outputs.destination }}" | \
@@ -102,10 +103,13 @@ jobs:
 
     - name: Test (SPM)
       if: ${{ matrix.platform == 'macos' }}
-      run: swift test | xcbeautify --renderer github-actions
+      run: |
+        set -o pipefail
+        swift test | xcbeautify --renderer github-actions
     - name: Test (Xcode)
       if: ${{ matrix.platform != 'macos' }}
       run: |
+        set -o pipefail
         xcodebuild test \
           -scheme ${{ needs.prepare.outputs.scheme }} \
           -destination "${{ steps.destination.outputs.destination }}" | \
