--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,25 +1,116 @@
 name: Pull request
 on: pull_request
 
-jobs:
-  pull-request:
-    runs-on: macos-15
+env:
+  XCODE_VERSION: "16.3"
 
+jobs:
+  prepare:
+    runs-on: macos-15
+    outputs:
+      platforms: ${{ steps.platforms.outputs.platforms }}
+      scheme: ${{ steps.scheme.outputs.scheme }}
     steps:
     - uses: actions/checkout@v4
+    - name: Setup Xcode
+      run: sudo xcode-select -s /Applications/Xcode_$XCODE_VERSION.app
 
-    - name: Setup
+    - name: Setup mise
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         curl https://mise.run | sh
         mise install
-
-    - name: Lint
+    - name: Run linters
       run: mise lint
 
-    - name: Build
-      run: swift build
+    - name: Extract platforms
+      id: platforms
+      run: |
+        platforms=$(swift package dump-package | jq -r '[.platforms[].platformName] | unique | @json')
+        echo "Platforms: $platforms"
+        echo "platforms=$platforms" >> $GITHUB_OUTPUT
 
-    - name: Test
-      run: swift test
+    - name: Extract scheme
+      id: scheme
+      run: |
+        repo=$(basename $GITHUB_REPOSITORY)
+        schemes=$(xcodebuild -list)
+        echo "$schemes"
+
+        if echo "$schemes" | grep -q "$repo-Package"; then
+          scheme="$repo-Package"
+        elif echo "$schemes" | grep -q "$repo"; then
+          scheme="$repo"
+        else
+          echo "Unable to select a scheme"
+          exit 1
+        fi
+
+        echo "Selected scheme: $scheme"
+        echo "scheme=$scheme" >> $GITHUB_OUTPUT
+
+  build-and-test:
+    needs: prepare
+    runs-on: macos-15
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: ${{ fromJSON(needs.prepare.outputs.platforms) }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup Xcode
+      run: sudo xcode-select -s /Applications/Xcode_$XCODE_VERSION.app
+
+    - name: Map destinations
+      if: ${{ matrix.platform != 'macos' }}
+      id: destination
+      run: |
+        case "${{ matrix.platform }}" in
+          ios)
+            destination="platform=iOS Simulator,name=iPhone 16 Pro Max,OS=latest"
+            ;;
+          maccatalyst)
+            destination="platform=macOS,variant=Mac Catalyst"
+            ;;
+          tvos)
+            destination="platform=tvOS Simulator,name=Apple TV 4K (3rd generation),OS=latest"
+            ;;
+          visionos)
+            destination="platform=visionOS Simulator,name=Apple Vision Pro,OS=latest"
+            ;;
+          watchos)
+            destination="platform=watchOS Simulator,name=Apple Watch Series 10 (46mm),OS=latest"
+            ;;
+          *)
+            echo "Unknown platform: ${{ matrix.platform }}"
+            exit 1
+            ;;
+        esac
+        echo "destination=$destination" >> $GITHUB_OUTPUT
+
+    - name: Build (SPM)
+      if: ${{ matrix.platform == 'macos' }}
+      run: swift build
+    - name: Build (Xcode)
+      if: ${{ matrix.platform != 'macos' }}
+      run: |
+        set -o pipefail
+        xcodebuild build \
+          -scheme ${{ needs.prepare.outputs.scheme }} \
+          -destination "${{ steps.destination.outputs.destination }}" | \
+          xcbeautify --renderer github-actions
+
+    - name: Test (SPM)
+      if: ${{ matrix.platform == 'macos' }}
+      run: |
+        set -o pipefail
+        swift test | xcbeautify --renderer github-actions
+    - name: Test (Xcode)
+      if: ${{ matrix.platform != 'macos' }}
+      run: |
+        set -o pipefail
+        xcodebuild test \
+          -scheme ${{ needs.prepare.outputs.scheme }} \
+          -destination "${{ steps.destination.outputs.destination }}" | \
+          xcbeautify --renderer github-actions
