--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -166,6 +166,9 @@ file_length:
 identifier_name:
     excluded: [id, x, y, z]
 
+line_length:
+    ignores_comments: true
+
 nesting:
     type_level: 2
 
@@ -192,4 +195,4 @@ custom_rules:
     empty_line_after_type_declaration:
         name: "Empty line after type declaration"
         message: "Type declaration should start with an empty line."
-        regex: "( |^)(actor|class|struct|enum|protocol|extension) (?!var)[^\\{]*? \\{(?!\\n*\\}) *\\n? *\\S"
+        regex: "( |^)(actor|class|struct|enum|protocol|extension) (?!var)[^\\{]*? \\{(?!\\s*\\}) *\\n? *\\S"
